ejb-cli: fix eclipse warnings